# Parallel_prog

./: .gitignore  README.md
Lab_1/: CMakeLists.txt
Lab_1/console/: console.cc
Lab_1/include/matrix/: matrix.h
Lab_1/python_check/: check.py  graphics.py  log.txt  matrix.exp
Lab_1/src/: matrix.cc
Lab_2/: CMakeLists.txt
Lab_2/console/: console.cc
Lab_2/include/matrix/: matrix.h
Lab_2/python_check_2/: check.py  console.ilk  graphics.py  log_omp.txt  log_omp_4.txt  matrix.exp  matrix.ilk
Lab_2/python_check_2_4/: CMakeCache.txt  check.py  cmake_install.cmake  console.ilk  matrix.ilk  matrix.lib
Lab_3/: CmakeLists.txt
Lab_3/console/: console.cc  korolev.cc
Lab_3/include/: matrix.h
Lab_3/korolev/: graphicks.py  korolev.cc  matrix.cc  script.pbs  slurm-124112.out  slurm-124114.out  slurm-124115.out  slurm-124120.out
Lab_3/python_check_3/: CMakeCache.txt  check.py  cmake_install.cmake  comprasion.py  console.ilk  graphics.py  matrix.exp  matrix.ilk  matrix.lib  mpi_results.csv  performance_comparison.csv
Lab_3/python_check_3/lib/: matrix.lib
Lab_3/src/: matrix.cc
Lab_4/: CMakeLists.txt  main.cpp  matrix.h  matrix_mul.cu  matrix_mul.cuh
Lab_4/python_check/: generate.py  graph.py  results.csv
python_check/: CMakeCache.txt  cmake_install.cmake  console.ilk  matrix.ilk
